Fixes #18: timestamp aligned right

--- a/src/components/Message.scss
+++ b/src/components/Message.scss
@@ -5,6 +5,7 @@
     word-wrap: break-word;
     display: flex;
     flex-direction: column;
+    align-items: self-end;
     gap: 5px;
 
     &.sender {
